2004-09-26  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfilechooserdefault.c (shortcuts_remove_rows): Remove 
	debug spew.
	(bookmarks_check_remove_sensitivity): Don't free an uninitialized
	pointer.

	* gtk/gtkimcontext.c (gtk_im_context_get_preedit_string): 
	cursor_pos is in characters, not bytes.  (#153332, Owen Taylor)

2004-09-25  Robert Ögren  <gtk@roboros.com>

	* gdk/win32/gdkinput-win32.c (gdk_input_wintab_init): Set
	lcSysOrgX and lcSysOrgY from device instead of hardcoding to 0,
	a further fix for bug #145467.

2004-09-25  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktextiter.c (inside_word_func): Don't access 
	attr[-1].  (#153628, Padraig O'Briain)

2004-09-23  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfilechooserdefault.c: Add some tooltips.

2004-09-22  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkrange.c (gtk_range_map, gtk_range_unmap): 
	* gtk/gtkbutton.c (gtk_button_map, gtk_button_unmap): Remove
	unnecessary g_return_if_fail()s from virtual functions.  (#153469,
	(Tristan Van Berkom) 

	* gtk/gtkaboutdialog.c (gtk_about_dialog_finalize): Don't leak
	cursors.  (#153468, Christian Persch)

	* gtk/gtktreeview.c (gtk_tree_view_key_press): Don't leak old_text.
	(#153467, Christian Persch)

	* gtk/gtkfilechooserdefault.c (selection_check_foreach_cb): Don't use
	bitops on booleans.
	(gtk_file_chooser_default_should_respond): Make it easier to 
	select folders in SELECT_FOLDER mode.

Wed Sep 22 00:54:34 2004  Matthias Clasen  <mclasen@redhat.com>

	* demos/gtk-demo/pixbufs.c (do_pixbufs): Don't leak the frame
	pixbuf.

Tue Sep 21 16:55:38 2004  Manish Singh  <yosh@gimp.org>

	* tests/testtreemodel.c: #include <config.h> for HAVE_MALLINFO define,
	other minor cleanups.

Tue Sep 21 16:27:19 2004  Manish Singh  <yosh@gimp.org>

	* gdk/gdk.c: remove now unused arg variables.

	* gdk/gdkinternals.h: declare _gdk_windowing_init ().

	* gtk/gtkmain.c (do_pre_parse_initialization): call gdk_parse_args ()